<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/img_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <GridView
        android:id="@+id/grid_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:horizontalSpacing="0dp"
        android:verticalSpacing="0dp" />

    <ImageView
        android:id="@+id/source_image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher"
        android:visibility="gone" />

    <Button
        android:id="@+id/split3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/grid_view"
        android:layout_alignLeft="@+id/grid_view"
        android:layout_marginBottom="106dp"
        android:onClick="buttonClick3"
        android:text="@string/split_3" />

    <Button
        android:id="@+id/split4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/split3"
        android:layout_alignBottom="@+id/split3"
        android:layout_centerHorizontal="true"
        android:onClick="buttonClick4"
        android:text="@string/split_4" />

    <Button
        android:id="@+id/split5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/split4"
        android:layout_alignBottom="@+id/split4"
        android:layout_alignRight="@+id/grid_view"
        android:onClick="buttonClick5"
        android:text="@string/split_5" />

    <Button
        android:id="@+id/shuffle_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/grid_view"
        android:layout_alignRight="@+id/split4"
        android:layout_marginBottom="23dp"
        android:onClick="buttonShuffle"
        android:text="@string/shuffle" />

    <Button
        android:id="@+id/select_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/split4"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:onClick="onSelectImage"
        android:text="@string/select_img" />

</RelativeLayout>